# catchup

./: .gitignore  README.md  pyproject.toml  todos_dump.sql
.github/: dependabot.yml
.github/workflows/: codeql-analysis.yml
src/catchup/: cli.py  db.py
