[tool.poetry]
name = "catchup"
version = "0.4.8"
description = "Simple CLI app to manage your to-do's."
authors = ["harmony5 <jeancgo@pm.me>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/harmony5/catchup"
homepage = "https://github.com/harmony5/catchup"

[tool.poetry.dependencies]
python = "^3.8"
typer = "^0.3.2"
dataset = "^1.5.0"
tabulate = "^0.8.9"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
catchup = "catchup.cli:cli"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
